--- a/Frontend/src/styles/Navigate.css
+++ b/Frontend/src/styles/Navigate.css
@@ -1,5 +1,5 @@
 .navigate-container {
-    margin-top: 2rem;
+    margin-top: 6px;
     background-color: white;
     padding: 10px 0;
     border-radius: 10px;
