--- a/Frontend/src/styles/Header.css
+++ b/Frontend/src/styles/Header.css
@@ -5,12 +5,12 @@
   
   .header-title {
     cursor: pointer;
-    color: #00A86B;
+    color: beige;
     font-size: 36px;
   }
   
   .header-title:hover {
-    color: #fff;
+    color: gray;
   }
   
   .header-date {
