--- a/Frontend/src/styles/Frontpage.css
+++ b/Frontend/src/styles/Frontpage.css
@@ -143,8 +143,8 @@
 }
 
 .note-timestamp {
-  font-size: 0.85rem;
-  color: gray;
+  font-size: 0.94rem;
+  color: black;
   margin-bottom: 10px;
 }
 
