--- a/Frontend/src/styles/Header.css
+++ b/Frontend/src/styles/Header.css
@@ -57,4 +57,54 @@
     background-color: #555;
     color: white;
   }
-  
+  /* Tabletti- ja mobiilikoko */
+@media (max-width: 768px) {
+  .header-title {
+    font-size: 24px;
+    text-align: center;
+    flex-grow: 0;
+    margin-bottom: 10px;
+  }
+
+  .header-date {
+    font-size: 12px;
+  }
+
+  .header-container {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .header-user-info {
+    justify-content: center;
+    margin-top: 10px;
+  }
+}
+
+/* Mobiilikoko */
+@media (max-width: 480px) {
+  .header-title {
+    font-size: 20px;
+  }
+
+  .header-container {
+    padding: 10px;
+  }
+
+  .header-user-info {
+    flex-direction: column;
+    align-items: center;
+    margin-top: 10px;
+  }
+
+  .logged-in-text {
+    margin-right: 0;
+    margin-bottom: 5px;
+  }
+
+  .login-button,
+  .logout-button {
+    font-size: 10px;
+    padding: 4px 8px;
+  }
+}
